Add missing JVM arguments